--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@ Smartphone Compatible web template" />
 						</div>
 					</div>
 				</div>
-				<h4>Mr.Shashwat Tiwari</h4>
+				<h4>Shashwat Tiwari</h4>
 
 				<div class="social-icons team-icons">
 					<ul>
