--- a/team.html
+++ b/team.html
@@ -239,7 +239,7 @@ Smartphone Compatible web template" />
 			<div data-aos="fade-up" class="col-md-3 agile_team_grid t4">
 				<div class="ih-item circle effect1">
 					<div class="spinner"></div>
-					<div class="img"><img src="images/team/secretary.jpg" alt=" " class="img-responsive" /></div>
+					<div class="img"><img src="images/team/secretaryy.jpg" alt=" " class="img-responsive" /></div>
 					<div class="info">
 						<div class="info-back">
 							<h4>General Secretary</h4>
