--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@ Smartphone Compatible web template" />
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 				</div>
 					<div class="modal-body">
-						<video src="images/vfx.mp4" controls class="img-responsive">
+						<iframe src="images/vfx.mp4" title="ACE" height="600" width="600"></iframe>
+						
 						</video>
 						<p style="color: white;">With our proud sponsor Microsoft Student Partner,
 							 we bring to you UPES ACE(Academic And Cocurricular Excellence) SC where we work not only to accomplish certain goals,
