--- a/team.html
+++ b/team.html
@@ -357,7 +357,7 @@ Smartphone Compatible web template" />
 					</div>
 				</div>
 			</div>
-			<h4>Mr.Abhay Bharadwaj</h4>
+			<h4>Abhay Bharadwaj</h4>
 
 			<div class="social-icons team-icons">
 				<ul>
